# building-git

./: .gitignore  Cargo.toml
src/: database.rs  index.rs  lockfile.rs  main.rs  refs.rs  repository.rs  telemetry.rs  workspace.rs
src/cmd/: add.rs  commit.rs  init.rs  mod.rs
src/database/: blob.rs  commit.rs  object.rs  objects.rs  tree.rs
src/index/: checksum.rs  mod.rs
