[package]
name = "jit"
version = "0.1.0"
authors = ["Ben Lipton <ben.lipton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.28", features = ["backtrace"] }
cookie-factory = "0.3.1"
flate2 = "1.0.14"
rust-crypto = "0.2.36"
rand = "0.7.3"
rustc-serialize = "0.3.24"
time = "0.2.9"
nom = "5.1.2"
thiserror = "1.0.30"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
derivative = "2.2.0"
clap = { version = "3.1.5", features = ["derive"] }

[features]

[dev-dependencies]
tempfile = "3.3.0"
